added custom profile button

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://oxyop:L9NR9Z0H3AmJ8paW@cluster0.7w2o33u.mongodb.net/clivra?retryWrites=true&w=majority"
+# DATABASE_URL="mongodb://localhost:27017/clivra"
