--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.8.4",
+    "@uploadthing/react": "^6.0.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -39,6 +40,7 @@
     "react-types": "^0.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.0.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
