--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@clerk/nextjs": "^4.26.2",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -30,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "emoji-mart": "^5.5.2",
     "lucide-react": "^0.292.0",
     "next": "^14.0.1",
@@ -37,6 +40,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-select": "^5.8.0",
     "react-types": "^0.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -52,7 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
