added group func, added remove conv, added real time

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="mongodb+srv://oxyop:L9NR9Z0H3AmJ8paW@cluster0.7w2o33u.mongodb.net/clivra?retryWrites=true&w=majority"
 # DATABASE_URL="mongodb://localhost:27017/clivra"
+NEXT_PUBLIC_PUSHER_APP_KEY=1cf0479aa6e031f18189
+PUSHER_APP_ID=1721997
+PUSHER_SECRET=9971556113c4e5ab962b
