--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-select": "^5.8.0",
+    "react-switch": "^7.0.0",
     "react-types": "^0.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
